# pub-open-astrocytes

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
_public/: search.json
_public/site_libs/bootstrap/: bootstrap-8a4495521795bd8f0176bba381c10a92.min.css
_public/site_libs/quarto-html/: quarto-syntax-highlighting-e548feee9d9b2388b97d0606b52115ab.css
quarto/: .gitignore  _quarto.yml  index.qmd  index.quarto_ipynb  references.bib
quarto/csl/: science.csl
src/oa_pub/analysis/: __init__.py  _common.py  _constants.py  _extraction.py  _stats.py  embed.py  pca.py
src/oa_pub/figures/: __init__.py
