[project]
name = "pub-open-astrocytes"
version = "0.1.0"
description = "Publication code for OpenAstrocytes: AI-ready dynamic activity from the astrocyte network"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atdata>=0.1.3b2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "toile>=0.1.1a2",
]
