[project]
name = "pub-open-astrocytes"
version = "1.1.0"
description = "Publication code for OpenAstrocytes: AI-ready dynamic activity from the astrocyte network"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astrocytes>=0.1.1b1",
    "atdata>=0.1.3b4",
    "forecast-style",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "modal>=1.2.2",
    "numpy>=2.3.4",
    "toile>=0.1.1b1",
]

[tool.uv]
package = true

[project.scripts]
embed = "oa_pub.analysis.embed:main"

[tool.uv.sources]
forecast-style = { git = "https://github.com/forecast-bio/style.git" }

[dependency-groups]
dev = [
    "jupyter-cache>=1.0.1",
]
